# wasmedge_bindgen_cpp_demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
macroutils/: Cargo.toml
macroutils/src/: lib.rs
module/: Cargo.toml
module/src/: lib.rs
